[EngSys] Add legacy packages  ***NO_CI***

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build": "pnpm -r --aggregate-output --reporter=append-only build",
+    "build:parallel": "pnpm -r --workspace-concurrency=Infinity --aggregate-output --reporter=append-only build",
     "clean": "pnpm -r run clean",
     "cspell": "cspell --no-progress .",
     "format": "prettier . --write",
