--- a/sdk/monitor/monitor-opentelemetry-exporter/package.json
+++ b/sdk/monitor/monitor-opentelemetry-exporter/package.json
@@ -103,14 +103,14 @@
     "@azure/core-auth": "workspace:~",
     "@azure/core-client": "workspace:~",
     "@azure/core-rest-pipeline": "workspace:~",
-    "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/api-logs": "^0.52.1",
-    "@opentelemetry/core": "^1.25.1",
-    "@opentelemetry/resources": "^1.25.1",
-    "@opentelemetry/sdk-logs": "^0.52.0",
-    "@opentelemetry/sdk-metrics": "^1.25.1",
-    "@opentelemetry/sdk-trace-base": "^1.25.1",
-    "@opentelemetry/semantic-conventions": "^1.25.1",
+    "@opentelemetry/api": "catalog:",
+    "@opentelemetry/api-logs": "catalog:",
+    "@opentelemetry/core": "catalog:",
+    "@opentelemetry/resources": "catalog:",
+    "@opentelemetry/sdk-logs": "catalog:",
+    "@opentelemetry/sdk-metrics": "catalog:",
+    "@opentelemetry/sdk-trace-base": "catalog:",
+    "@opentelemetry/semantic-conventions": "catalog:",
     "tslib": "catalog:"
   },
   "sideEffects": false,
