--- a/sdk/monitor/monitor-opentelemetry/package.json
+++ b/sdk/monitor/monitor-opentelemetry/package.json
@@ -90,27 +90,27 @@
     "@azure/monitor-opentelemetry-exporter": "1.0.0-beta.25",
     "@azure/opentelemetry-instrumentation-azure-sdk": "^1.0.0-beta.5",
     "@microsoft/applicationinsights-web-snippet": "^1.2.1",
-    "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/api-logs": "^0.52.1",
-    "@opentelemetry/core": "^1.25.1",
-    "@opentelemetry/instrumentation": "^0.52.1",
-    "@opentelemetry/instrumentation-bunyan": "^0.40.0",
-    "@opentelemetry/instrumentation-http": "^0.52.1",
-    "@opentelemetry/instrumentation-mongodb": "^0.46.0",
-    "@opentelemetry/instrumentation-mysql": "^0.40.0",
-    "@opentelemetry/instrumentation-pg": "^0.43.0",
-    "@opentelemetry/instrumentation-redis": "^0.41.0",
-    "@opentelemetry/instrumentation-redis-4": "^0.41.0",
-    "@opentelemetry/instrumentation-winston": "^0.39.0",
-    "@opentelemetry/resource-detector-azure": "^0.2.9",
-    "@opentelemetry/resources": "^1.25.1",
-    "@opentelemetry/sdk-logs": "^0.52.1",
-    "@opentelemetry/sdk-metrics": "^1.25.1",
-    "@opentelemetry/sdk-node": "^0.52.1",
-    "@opentelemetry/sdk-trace-base": "^1.25.1",
-    "@opentelemetry/sdk-trace-node": "^1.25.1",
-    "@opentelemetry/semantic-conventions": "^1.25.1",
-    "@opentelemetry/winston-transport": "^0.5.0",
+    "@opentelemetry/api": "catalog:",
+    "@opentelemetry/api-logs": "catalog:",
+    "@opentelemetry/core": "catalog:",
+    "@opentelemetry/instrumentation": "catalog:",
+    "@opentelemetry/instrumentation-bunyan": "catalog:",
+    "@opentelemetry/instrumentation-http": "catalog:",
+    "@opentelemetry/instrumentation-mongodb": "catalog:",
+    "@opentelemetry/instrumentation-mysql": "catalog:",
+    "@opentelemetry/instrumentation-pg": "catalog:",
+    "@opentelemetry/instrumentation-redis": "catalog:",
+    "@opentelemetry/instrumentation-redis-4": "catalog:",
+    "@opentelemetry/instrumentation-winston": "catalog:",
+    "@opentelemetry/resource-detector-azure": "catalog:",
+    "@opentelemetry/resources": "catalog:",
+    "@opentelemetry/sdk-logs": "catalog:",
+    "@opentelemetry/sdk-metrics": "catalog:",
+    "@opentelemetry/sdk-node": "catalog:",
+    "@opentelemetry/sdk-trace-base": "catalog:",
+    "@opentelemetry/sdk-trace-node": "catalog:",
+    "@opentelemetry/semantic-conventions": "catalog:",
+    "@opentelemetry/winston-transport": "catalog:",
     "tslib": "catalog:"
   },
   "sideEffects": false,
