--- a/sdk/notificationhubs/notification-hubs/package.json
+++ b/sdk/notificationhubs/notification-hubs/package.json
@@ -82,7 +82,7 @@
     "@azure-rest/core-client": "workspace:~",
     "@azure/abort-controller": "workspace:~",
     "@azure/core-auth": "workspace:~",
-    "@azure/core-lro": "catalog:core-lroV2",
+    "@azure/core-lro": "workspace:~",
     "@azure/core-paging": "workspace:~",
     "@azure/core-rest-pipeline": "workspace:~",
     "@azure/core-tracing": "workspace:~",
