--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -5,6 +5,8 @@ parameters:
 
 steps:
   - template: /eng/common/pipelines/templates/steps/save-package-properties.yml
+    parameters:
+      ServiceDirectory: ${{parameters.ServiceDirectory}}
 
   - template: /eng/common/pipelines/templates/steps/check-spelling.yml
 
