--- a/eng/pipelines/templates/steps/build.yml
+++ b/eng/pipelines/templates/steps/build.yml
@@ -54,16 +54,7 @@ steps:
           echo "##vso[task.setvariable variable=rushBuildCacheCred;issecret=true;]$sasToken"
 
   - pwsh: |
-      $prDiff = Get-Content $(Build.ArtifactStagingDirectory)/diff/diff.json | ConvertFrom-Json -AsHashTable
-
-      $services = "auto"
-      if ($prDiff["ChangedServices"]) {
-        $services = $prDiff["ChangedServices"] -join " "
-      }
-
-      Write-Host "##vso[task.setvariable variable=ChangedServices;]$services"
-
-      node eng/tools/rush-runner.js build $services -packages "$(ArtifactPackageNames)" --verbose -p max
+      node eng/tools/rush-runner.js build $(ChangedServices) -packages "$(ArtifactPackageNames)" --verbose -p max
     displayName: "Build libraries for PR"
     condition: and(succeeded(),eq(variables['Build.Reason'],'PullRequest'))
     env:
