--- a/eng/pipelines/templates/steps/npm-release-task.yml
+++ b/eng/pipelines/templates/steps/npm-release-task.yml
@@ -52,5 +52,5 @@ steps:
     inputs:
       targetType: filePath
       filePath: eng/scripts/verify-npm-tags.ps1
-      arguments: -packageArtifact ${{parameters.Artifact}} -workingDirectory $(System.DefaultWorkingDirectory)
+      arguments: -packageArtifact '${{ convertToJson(parameters.Artifact) }}' -workingDirectory $(System.DefaultWorkingDirectory)
       pwsh: true
