--- a/sdk/standbypool/arm-standbypool/package.json
+++ b/sdk/standbypool/arm-standbypool/package.json
@@ -7,11 +7,29 @@
   "engines": {
     "node": ">=18.0.0"
   },
+  "sideEffects": false,
+  "autoPublish": false,
+  "tshy": {
+    "exports": {
+      "./package.json": "./package.json",
+      ".": "./src/index.ts",
+      "./models": "./src/models/index.ts"
+    },
+    "dialects": [
+      "esm",
+      "commonjs"
+    ],
+    "esmDialects": [
+      "browser",
+      "react-native"
+    ],
+    "selfLink": false
+  },
   "dependencies": {
-    "@azure/abort-controller": "catalog:abort-controllerV1",
+    "@azure/abort-controller": "workspace:~",
     "@azure/core-auth": "workspace:~",
     "@azure/core-client": "workspace:~",
-    "@azure/core-lro": "catalog:core-lroV2",
+    "@azure/core-lro": "workspace:~",
     "@azure/core-paging": "workspace:~",
     "@azure/core-rest-pipeline": "workspace:~",
     "tslib": "catalog:"
@@ -28,24 +46,23 @@
   "module": "./dist-esm/src/index.js",
   "types": "./types/arm-standbypool.d.ts",
   "devDependencies": {
-    "@azure-tools/test-credential": "catalog:test-credentialV1",
-    "@azure-tools/test-recorder": "catalog:test-recorderV3",
+    "@azure-tools/test-credential": "workspace:~",
+    "@azure-tools/test-recorder": "workspace:~",
     "@azure/dev-tool": "workspace:~",
+    "@azure/eslint-plugin-azure-sdk": "workspace:~",
     "@azure/identity": "workspace:~",
     "@microsoft/api-extractor": "catalog:",
-    "@types/chai": "catalog:",
-    "@types/mocha": "catalog:",
     "@types/node": "catalog:",
-    "chai": "catalog:",
-    "cross-env": "catalog:",
+    "@vitest/browser": "catalog:",
+    "@vitest/coverage-istanbul": "catalog:",
     "dotenv": "catalog:",
-    "esm": "^3.2.18",
+    "eslint": "catalog:",
     "mkdirp": "catalog:",
-    "mocha": "catalog:",
+    "playwright": "catalog:",
     "rimraf": "catalog:",
-    "ts-node": "catalog:",
+    "tshy": "catalog:",
     "typescript": "catalog:",
-    "uglify-js": "^3.4.9"
+    "vitest": "catalog:"
   },
   "repository": {
     "type": "git",
@@ -72,31 +89,30 @@
     "types/*"
   ],
   "scripts": {
-    "build": "npm run clean && tsc && dev-tool run bundle && npm run minify && mkdirp ./review && npm run extract-api",
-    "minify": "uglifyjs -c -m --comments --source-map \"content='./dist/index.js.map'\" -o ./dist/index.min.js ./dist/index.js",
-    "prepack": "npm run build",
-    "pack": "npm pack 2>&1",
-    "extract-api": "api-extractor run --local",
-    "lint": "echo skipped",
+    "audit": "node ../../../common/scripts/rush-audit.js && rimraf node_modules package-lock.json && npm i --package-lock-only 2>&1 && npm audit",
+    "build": "npm run clean && tshy && mkdirp ./review && dev-tool run extract-api",
+    "build:samples": "dev-tool run typecheck --paths samples-dev/*.ts && dev-tool samples publish -f",
+    "build:test": "npm run clean && tshy && dev-tool run build-test",
+    "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.{ts,cts,mts}\" \"test/**/*.{ts,cts,mts}\" \"*.{js,cjs,mjs,json}\" \"samples-dev/*.ts\"",
     "clean": "rimraf --glob dist dist-browser dist-esm test-dist temp types *.tgz *.log",
-    "build:node": "echo skipped",
-    "build:browser": "echo skipped",
-    "build:test": "echo skipped",
-    "build:samples": "echo skipped.",
-    "check-format": "echo skipped",
-    "execute:samples": "echo skipped",
-    "format": "echo skipped",
-    "test": "npm run integration-test",
-    "test:node": "echo skipped",
-    "test:browser": "echo skipped",
-    "unit-test": "npm run unit-test:node && npm run unit-test:browser",
-    "unit-test:node": "cross-env TEST_MODE=playback npm run integration-test:node",
-    "unit-test:browser": "echo skipped",
+    "execute:samples": "dev-tool samples run samples-dev",
+    "extract-api": "rimraf review && mkdirp ./review && dev-tool run extract-api",
+    "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.{ts,cts,mts}\" \"test/**/*.{ts,cts,mts}\" \"*.{js,cjs,mjs,json}\" \"samples-dev/*.ts\"",
+    "generate:client": "echo skipped",
     "integration-test": "npm run integration-test:node && npm run integration-test:browser",
-    "integration-test:node": "dev-tool run test:node-ts-input -- --timeout 1200000 'test/*.ts'",
-    "integration-test:browser": "echo skipped"
+    "integration-test:browser": "echo skipped",
+    "integration-test:node": "echo skipped",
+    "lint": "echo skipped",
+    "lint:fix": "echo skipped",
+    "pack": "npm pack 2>&1",
+    "test": "npm run clean && tshy && npm run unit-test:node && dev-tool run bundle && npm run unit-test:browser && npm run integration-test",
+    "test:browser": "npm run clean && npm run build:test && npm run unit-test:browser && npm run integration-test:browser",
+    "test:node": "npm run clean && tshy && npm run unit-test:node && npm run integration-test:node",
+    "unit-test": "npm run unit-test:node && npm run unit-test:browser",
+    "unit-test:browser": "npm run build:test && dev-tool run test:vitest --browser",
+    "unit-test:node": "dev-tool run test:vitest",
+    "update-snippets": "echo skipped"
   },
-  "sideEffects": false,
   "//metadata": {
     "constantPaths": [
       {
@@ -105,7 +121,6 @@
       }
     ]
   },
-  "autoPublish": true,
   "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/standbypool/arm-standbypool",
   "//sampleConfiguration": {
     "productName": "",
