updated the sample, changelog and formated the code

--- a/sdk/communication/communication-messages-rest/package.json
+++ b/sdk/communication/communication-messages-rest/package.json
@@ -2,9 +2,16 @@
   "name": "@azure-rest/communication-messages",
   "sdk-type": "client",
   "author": "Microsoft Corporation",
-  "version": "1.1.0-beta.1",
+  "version": "1.1.0",
   "description": "Azure client library for Azure Communication Messages services",
-  "keywords": ["node", "azure", "cloud", "typescript", "browser", "isomorphic"],
+  "keywords": [
+    "node",
+    "azure",
+    "cloud",
+    "typescript",
+    "browser",
+    "isomorphic"
+  ],
   "license": "MIT",
   "main": "dist/index.js",
   "module": "./dist-esm/src/index.js",
@@ -110,6 +117,9 @@
   },
   "//sampleConfiguration": {
     "productName": "Azure client library for Azure Communication Messages Services",
-    "productSlugs": ["azure", "azure-communication-services"]
+    "productSlugs": [
+      "azure",
+      "azure-communication-services"
+    ]
   }
 }
