--- a/sdk/communication/communication-messages-rest/tsconfig.json
+++ b/sdk/communication/communication-messages-rest/tsconfig.json
@@ -7,5 +7,5 @@
       "@azure-rest/communication-messages": ["./src/index"]
     }
   },
-  "include": ["src/**/*.ts", "./test/**/*.ts", "samples-dev/**/*.ts"]
+  "include": ["src/**/*.ts", "test/**/*.ts", "samples-dev/**/*.ts"]
 }
