[EngSys] Add legacy packages  ***NO_CI***

--- a/sdk/ai/ai-inference-rest/package.json
+++ b/sdk/ai/ai-inference-rest/package.json
@@ -82,6 +82,7 @@
     "@azure/core-auth": "workspace:~",
     "@azure/core-lro": "catalog:core-lroV2",
     "@azure/core-rest-pipeline": "workspace:~",
+    "@azure/core-tracing": "workspace:~",
     "@azure/logger": "workspace:~",
     "tslib": "catalog:"
   },
@@ -94,12 +95,17 @@
     "@azure/dev-tool": "file:../../../common/tools/dev-tool",
     "@azure/eslint-plugin-azure-sdk": "file:../../../common/tools/eslint-plugin-azure-sdk",
     "@azure/identity": "workspace:~",
+    "@azure/opentelemetry-instrumentation-azure-sdk": "workspace:~",
+    "@azure/monitor-opentelemetry-exporter": "workspace:~",
     "@microsoft/api-extractor": "catalog:",
+    "@opentelemetry/api": "catalog:",
+    "@opentelemetry/instrumentation": "catalog:",
+    "@opentelemetry/sdk-trace-node": "catalog:",
     "@types/node": "catalog:",
     "@vitest/browser": "catalog:",
     "@vitest/coverage-istanbul": "catalog:",
     "autorest": "latest",
-    "cross-env": "7.0.3",
+    "cross-env": "catalog:",
     "dotenv": "catalog:",
     "mkdirp": "catalog:",
     "playwright": "catalog:",
