--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "pnpm": "^9.0.0"
   },
   "scripts": {
-    "build": "pnpm -r --aggregate-output --reporter=append-only build",
-    "build:parallel": "pnpm -r --workspace-concurrency=Infinity --aggregate-output --reporter=append-only build",
+    "build:lage": "lage build",
+    "build:pnpm": "pnpm -r --aggregate-output --reporter=append-only build",
+    "build": "pnpm -r --workspace-concurrency=Infinity --aggregate-output --reporter=append-only build",
     "clean": "pnpm -r run clean",
     "cspell": "cspell --no-progress .",
     "format": "prettier . --write",
@@ -21,6 +22,7 @@
     "@vitest/browser": "^2.1.2",
     "@vitest/coverage-istanbul": "^2.1.2",
     "cspell": "^8.14.4",
+    "lage": "^2.11.4",
     "prettier": "^3.3.3",
     "rimraf": "^5.0.10",
     "tsx": "^4.19.1",
