--- a/sdk/schemaregistry/schema-registry-avro/package.json
+++ b/sdk/schemaregistry/schema-registry-avro/package.json
@@ -93,10 +93,10 @@
     "cross-env": "^7.0.2",
     "dotenv": "^16.0.0",
     "eslint": "^9.9.0",
+    "playwright": "^1.47.1",
     "process": "^0.11.10",
     "rimraf": "^5.0.5",
     "stream": "^0.0.3",
-    "ts-node": "^10.0.0",
     "typescript": "~5.6.2",
     "uuid": "^8.3.0",
     "vitest": "^2.1.1"
