[Schema Registry Avro] ESM Migrate (#31131)
Migrate SR Avro

--- a/sdk/schemaregistry/schema-registry-avro/tests.yml
+++ b/sdk/schemaregistry/schema-registry-avro/tests.yml
@@ -5,3 +5,5 @@ extends:
     parameters:
       PackageName: "@azure/schema-registry-avro"
       ServiceDirectory: schemaregistry
+      MatrixFilters:
+        - DependencyVersion=^$
