--- a/sdk/schemaregistry/schema-registry-avro/tsconfig.json
+++ b/sdk/schemaregistry/schema-registry-avro/tsconfig.json
@@ -1,13 +1,20 @@
 {
   "extends": "../../../tsconfig",
   "compilerOptions": {
-    "outDir": "./dist-esm",
-    "declarationDir": "./types",
     "paths": {
-      "@azure/schema-registry-avro": ["./src/index"]
+      "@azure/schema-registry-avro": ["./src/index.js"]
     },
-    "lib": ["dom"],
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "rootDir": "."
   },
-  "include": ["src/**/*.ts", "test/**/*.ts", "samples-dev/**/*.ts"]
+  "include": [
+    "./src/**/*.ts",
+    "./src/**/*.mts",
+    "./src/**/*.cts",
+    "./samples-dev/**/*.ts",
+    "./test/**/*.ts",
+    "./test/**/*.mts"
+  ]
 }
