--- a/sdk/web-pubsub/web-pubsub-client-protobuf/package.json
+++ b/sdk/web-pubsub/web-pubsub-client-protobuf/package.json
@@ -70,60 +70,53 @@
     "@azure/logger": "workspace:~",
     "@azure/web-pubsub-client": "workspace:~",
     "long": "^5.2.1",
-    "protobufjs": "~7.3.0",
+    "protobufjs": "^7.4.0",
     "tslib": "catalog:"
   },
   "devDependencies": {
-    "@azure-tools/test-utils": "workspace:~",
     "@azure/dev-tool": "workspace:~",
     "@azure/eslint-plugin-azure-sdk": "workspace:~",
-    "@azure/web-pubsub": "^1.1.0",
+    "@azure/web-pubsub": "workspace:~",
     "@microsoft/api-extractor": "catalog:",
-    "@types/chai": "catalog:",
-    "@types/chai-as-promised": "^7.1.5",
-    "@types/express": "^4.16.0",
-    "@types/express-serve-static-core": "^4.17.19",
-    "@types/jsonwebtoken": "^9.0.0",
-    "@types/mocha": "catalog:",
     "@types/node": "catalog:",
-    "@types/sinon": "catalog:",
-    "@types/ws": "^7.4.5",
-    "chai": "catalog:",
-    "copyfiles": "2.4.1",
-    "cross-env": "catalog:",
+    "@vitest/coverage-istanbul": "catalog:",
+    "cpy-cli": "^5.0.0",
     "dotenv": "catalog:",
     "eslint": "catalog:",
-    "express": "^4.16.3",
-    "karma": "catalog:",
-    "karma-chrome-launcher": "catalog:",
-    "karma-coverage": "catalog:",
-    "karma-edge-launcher": "^0.4.2",
-    "karma-env-preprocessor": "catalog:",
-    "karma-firefox-launcher": "catalog:",
-    "karma-ie-launcher": "^1.0.0",
-    "karma-json-preprocessor": "catalog:",
-    "karma-json-to-file-reporter": "catalog:",
-    "karma-junit-reporter": "catalog:",
-    "karma-mocha": "catalog:",
-    "karma-mocha-reporter": "catalog:",
-    "karma-sourcemap-loader": "catalog:",
-    "mocha": "catalog:",
-    "mock-socket": "^9.1.5",
-    "nyc": "catalog:",
-    "protobufjs-cli": "^1.1.1",
-    "puppeteer": "^23.0.2",
+    "move-file-cli": "^3.0.0",
+    "protobufjs-cli": "^1.1.3",
     "rimraf": "catalog:",
-    "rollup": "^4.0.0",
-    "sinon": "catalog:",
-    "source-map-support": "^0.5.9",
-    "ts-node": "catalog:",
     "typescript": "catalog:",
-    "util": "^0.12.1"
+    "vitest": "catalog:"
   },
   "//sampleConfiguration": {
     "productName": "Azure Web PubSub Client",
     "productSlugs": [
       "azure"
     ]
+  },
+  "tshy": {
+    "exports": {
+      "./package.json": "./package.json",
+      ".": "./src/index.ts"
+    },
+    "dialects": [
+      "esm",
+      "commonjs"
+    ],
+    "selfLink": false
+  },
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "import": {
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/index.d.ts",
+        "default": "./dist/commonjs/index.js"
+      }
+    }
   }
 }
