--- a/sdk/fabric/arm-fabric/package.json
+++ b/sdk/fabric/arm-fabric/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/arm-fabric",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "description": "A generated SDK for FabricClient.",
   "engines": {
     "node": ">=18.0.0"
@@ -50,7 +50,7 @@
   "//metadata": {
     "constantPaths": [
       {
-        "path": "src/rest/fabricClient.ts",
+        "path": "src/api/fabricContext.ts",
         "prefix": "userAgentInfo"
       }
     ]
@@ -63,8 +63,7 @@
     "@azure/logger": "^1.0.0",
     "tslib": "^2.6.2",
     "@azure/core-lro": "^3.0.0",
-    "@azure/abort-controller": "^2.1.2",
-    "@azure/core-paging": "^1.5.0"
+    "@azure/abort-controller": "^2.1.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
