--- a/sdk/schemaregistry/schema-registry-avro/package.json
+++ b/sdk/schemaregistry/schema-registry-avro/package.json
@@ -74,7 +74,7 @@
   },
   "dependencies": {
     "@azure/logger": "^1.0.0",
-    "@azure/schema-registry": "1.2.0",
+    "@azure/schema-registry": "^1.3.0",
     "avsc": "^5.5.1",
     "lru-cache": "^10.2.0",
     "tslib": "^2.2.0"
