--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^3.3.3",
     "rimraf": "^5.0.10",
     "tsx": "^4.19.1",
+    "turbo": "^2.1.3",
     "typescript": "~5.5.4",
     "vitest": "^2.1.2"
   }
