--- a/sdk/storage/storage-file-datalake/package.json
+++ b/sdk/storage/storage-file-datalake/package.json
@@ -126,7 +126,7 @@
     "@azure/core-util": "^1.1.1",
     "@azure/core-xml": "^1.4.3",
     "@azure/logger": "^1.0.0",
-    "@azure/storage-blob": "^12.25.0",
+    "@azure/storage-blob": "^12.26.0-beta.1",
     "events": "^3.0.0",
     "tslib": "^2.2.0"
   },
