--- a/sdk/maps/maps-common/package.json
+++ b/sdk/maps/maps-common/package.json
@@ -6,12 +6,12 @@
   "main": "dist/index.js",
   "module": "dist-esm/index.js",
   "types": "types/latest/maps-common.d.ts",
-  "browser": {},
+  "browser": "./dist/browser/index.js",
   "scripts": {
     "audit": "node ../../../common/scripts/rush-audit.js && rimraf node_modules package-lock.json && npm i --package-lock-only 2>&1 && npm audit",
-    "build": "tsc -p . && npm run build:nodebrowser && dev-tool run extract-api",
-    "build:browser": "tsc -p . && dev-tool run bundle",
-    "build:node": "tsc -p . && dev-tool run bundle",
+    "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
+    "build:browser": "dev-tool run build-package && dev-tool run bundle",
+    "build:node": "dev-tool run build-package && dev-tool run bundle",
     "build:nodebrowser": "dev-tool run bundle",
     "build:samples": "echo skipped",
     "build:test": "echo skipped",
@@ -19,7 +19,7 @@
     "ci": "npm run build && npm run check-format && npm run lint",
     "clean": "rimraf --glob dist dist-* temp types *.tgz *.log coverage coverage-browser",
     "execute:samples": "echo skipped",
-    "extract-api": "tsc -p . && dev-tool run extract-api",
+    "extract-api": "dev-tool run build-package && dev-tool run extract-api",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"*.{js,json}\"",
     "generate:client": "echo skipped",
     "integration-test": "npm run integration-test:node && npm run integration-test:browser",
@@ -32,14 +32,12 @@
     "test:browser": "echo skipped",
     "test:node": "echo skipped",
     "unit-test": "echo skipped",
-    "unit-test:browser": "echo skipped",
-    "unit-test:node": "echo skipped",
+    "unit-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --no-test-proxy --browser",
+    "unit-test:node": "dev-tool run test:vitest",
     "update-snippets": "echo skipped"
   },
   "files": [
     "dist/",
-    "dist-esm/",
-    "types/latest/",
     "README.md",
     "LICENSE"
   ],
@@ -70,14 +68,33 @@
     "@azure/core-rest-pipeline": "^1.1.0"
   },
   "devDependencies": {
-    "@azure-tools/test-utils": "^1.0.1",
+    "@azure-tools/test-utils-vitest": "^1.0.0",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
     "@microsoft/api-extractor": "^7.31.1",
     "@types/node": "^18.0.0",
+    "@vitest/browser": "^2.1.3",
+    "@vitest/coverage-istanbul": "^2.1.3",
     "eslint": "^9.9.0",
+    "playwright": "^1.48.0",
     "rimraf": "^5.0.5",
-    "ts-node": "^10.0.0",
-    "typescript": "~5.6.2"
+    "typescript": "~5.6.2",
+    "vitest": "^2.1.3"
+  },
+  "type": "module",
+  "tshy": {
+    "exports": {
+      "./package.json": "./package.json",
+      ".": "./src/index.ts"
+    },
+    "dialects": [
+      "esm",
+      "commonjs"
+    ],
+    "esmDialects": [
+      "browser",
+      "react-native"
+    ],
+    "selfLink": false
   }
 }
