--- a/sdk/maps/maps-common/package.json
+++ b/sdk/maps/maps-common/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0-beta.3",
   "description": "An internal shared package for Azure Maps TypeScript SDK",
   "sdk-type": "client",
-  "main": "dist/index.js",
-  "module": "dist-esm/index.js",
-  "types": "types/latest/maps-common.d.ts",
+  "main": "./dist/commonjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/commonjs/index.d.ts",
   "browser": "./dist/browser/index.js",
   "scripts": {
     "audit": "node ../../../common/scripts/rush-audit.js && rimraf node_modules package-lock.json && npm i --package-lock-only 2>&1 && npm audit",
@@ -61,11 +61,12 @@
   "sideEffects": false,
   "prettier": "@azure/eslint-plugin-azure-sdk/prettier.json",
   "dependencies": {
-    "@azure/abort-controller": "^2.0.0",
-    "@azure/core-auth": "^1.3.0",
-    "@azure/core-client": "^1.0.0",
+    "@azure/abort-controller": "^2.1.2",
+    "@azure/core-auth": "^1.8.0",
+    "@azure/core-client": "^1.9.2",
     "@azure/core-lro": "^2.2.0",
-    "@azure/core-rest-pipeline": "^1.1.0"
+    "@azure/core-rest-pipeline": "^1.17.0",
+    "tslib": "^2.7.0"
   },
   "devDependencies": {
     "@azure-tools/test-utils-vitest": "^1.0.0",
@@ -96,5 +97,26 @@
       "react-native"
     ],
     "selfLink": false
+  },
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "browser": {
+        "types": "./dist/browser/index.d.ts",
+        "default": "./dist/browser/index.js"
+      },
+      "react-native": {
+        "types": "./dist/react-native/index.d.ts",
+        "default": "./dist/react-native/index.js"
+      },
+      "import": {
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/index.d.ts",
+        "default": "./dist/commonjs/index.js"
+      }
+    }
   }
 }
