--- a/sdk/maps/maps-common/package.json
+++ b/sdk/maps/maps-common/package.json
@@ -33,7 +33,7 @@
     "test:node": "echo skipped",
     "unit-test": "echo skipped",
     "unit-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --no-test-proxy --browser",
-    "unit-test:node": "dev-tool run test:vitest",
+    "unit-test:node": "echo skipped",
     "update-snippets": "echo skipped"
   },
   "files": [
