--- a/sdk/maps/maps-common/package.json
+++ b/sdk/maps/maps-common/package.json
@@ -10,11 +10,8 @@
   "scripts": {
     "audit": "node ../../../common/scripts/rush-audit.js && rimraf node_modules package-lock.json && npm i --package-lock-only 2>&1 && npm audit",
     "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
-    "build:browser": "dev-tool run build-package && dev-tool run bundle",
-    "build:node": "dev-tool run build-package && dev-tool run bundle",
-    "build:nodebrowser": "dev-tool run bundle",
-    "build:samples": "echo skipped",
-    "build:test": "echo skipped",
+    "build:samples": "echo Obsolete",
+    "build:test": "echo skipped. actual commands inlined in browser test scripts",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"*.{js,json}\"",
     "ci": "npm run build && npm run check-format && npm run lint",
     "clean": "rimraf --glob dist dist-* temp types *.tgz *.log coverage coverage-browser",
