--- a/sdk/maps/maps-common/tsconfig.json
+++ b/sdk/maps/maps-common/tsconfig.json
@@ -5,5 +5,9 @@
     "moduleResolution": "NodeNext",
     "rootDir": "."
   },
-  "include": ["src/**/*.ts", "src/**/*.mts", "src/**/*.cts", "samples-dev/**/*.ts", "test/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.mts",
+    "src/**/*.cts"
+  ]
 }
