[OpenAI] Update tests (#31402)
- ~re-enable running samples~ [Will be deferred to another PR]
- ~re-enable min/max testing~ [Will be deferred to another PR]
- use service connection to enable cross-tenants testing

Live run:
https://dev.azure.com/azure-sdk/internal/_build/results?buildId=4231515&view=results

--- a/sdk/openai/openai/tests.yml
+++ b/sdk/openai/openai/tests.yml
@@ -5,6 +5,10 @@ extends:
   parameters:
     PackageName: "@azure/openai"
     ServiceDirectory: openai
+    Clouds: 'Public'
+    CloudConfig:
+      Public:
+        ServiceConnection: azure-sdk-tests-openai
     MatrixFilters:
       - TestType=^(?!sample).*
       - DependencyVersion=^$
