--- a/sdk/openai/openai/package.json
+++ b/sdk/openai/openai/package.json
@@ -125,7 +125,8 @@
     "playwright": "^1.45.3",
     "rimraf": "^3.0.2",
     "typescript": "~5.6.2",
-    "vitest": "^2.0.4"
+    "vitest": "^2.0.4",
+    "zod": "^3.23.8"
   },
   "dependencies": {
     "@azure-rest/core-client": "^2.2.0",
