ensure that our new logic doesn't get activated in other service directories that are running as normal

--- a/eng/common/pipelines/templates/steps/save-package-properties.yml
+++ b/eng/common/pipelines/templates/steps/save-package-properties.yml
@@ -16,7 +16,7 @@ parameters:
     default: eng/common/scripts
 
 steps:
-  - ${{ if eq(variables['Build.Reason'], 'PullRequest') }}:
+  - ${{ if and(eq(variables['Build.Reason'], 'PullRequest'), or(eq(parameters.ServiceDirectoryFilter, ''), eq(parameters.ServiceDirectory, parameters.ServiceDirectoryFilter))) }}:
       - task: Powershell@2
         displayName: Generate PR Diff
         inputs:
