--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -7,6 +7,7 @@ steps:
   - template: /eng/common/pipelines/templates/steps/save-package-properties.yml
     parameters:
       ServiceDirectory: ${{parameters.ServiceDirectory}}
+      ServiceDirectoryFilter: 'auto'
 
   - template: /eng/common/pipelines/templates/steps/check-spelling.yml
 
