post migration fixes

--- a/sdk/attestation/attestation/tsconfig.json
+++ b/sdk/attestation/attestation/tsconfig.json
@@ -8,5 +8,12 @@
     "moduleResolution": "NodeNext",
     "rootDir": "."
   },
-  "include": ["src/**/*.ts", "src/**/*.mts", "src/**/*.cts", "samples-dev/**/*.ts", "test/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.mts",
+    "src/**/*.cts",
+    "samples-dev/**/*.ts",
+    "test/**/*.ts",
+    "test/utils/env-browser.mts"
+  ]
 }
