--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -21,8 +21,7 @@ steps:
       filePath: eng/scripts/spell-check-public-apis.ps1
       arguments: -ChangedServices $(ChangedServices)
       pwsh: true
-    displayName: Spell check public API for PR
-    condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
+    displayName: Spell check public API
 
   - template: /eng/common/pipelines/templates/steps/set-test-pipeline-version.yml
     parameters:
@@ -70,10 +69,6 @@ steps:
   - script: |
       node common/scripts/install-run-rush.js install
     displayName: "Install dependencies"
-
-  - template: /eng/pipelines/templates/steps/set-artifact-packages.yml
-    parameters:
-      PackageInfo: $(Build.ArtifactStagingDirectory)/PackageInfo
 
   - script: |
       node eng/tools/rush-runner.js build $(ChangedServices) -packages "$(ArtifactPackageNames)" --verbose -p max
