--- a/sdk/openai/openai/samples/v2-beta/javascript/sample.env
+++ b/sdk/openai/openai/samples/v2-beta/javascript/sample.env
@@ -1,3 +1,13 @@
-# Used to authenticate with the Azure OpenAI. Retrieve these
-# values from an Azure OpenAI instance in the Azure Portal.
+# The endpoint of the Azure OpenAI resource
 AZURE_OPENAI_ENDPOINT="https://<resource name>.openai.azure.com"
+# The endpoint of the Azure Search resource
+AZURE_SEARCH_ENDPOINT="https://<resource name>.cognitiveservices.azure.com/"
+# The name of the Azure Search index
+AZURE_SEARCH_INDEX_NAME="your Azure Search index name"
+# The endpoint of the Azure OpenAI resource in the North Central US region for audio samples.
+AZURE_OPENAI_NORTHCENTRALUS_ENDPOINT="https://<resource name>.openai.azure.com"
+# The endpoint of the Azure OpenAI resource in the Sweden Central region for vision samples
+AZURE_OPENAI_SWEDENCENTRAL_ENDPOINT="https://<resource name>.openai.azure.com"
+
+# The path to an audio file to be transcribed or translated
+AUDIO_FILE_PATH="path/to/audio/file"
